<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.comments.CommentActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/outer_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/container_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible">

            <EditText
                android:id="@+id/edt_comment"
                android:background="@drawable/bg_item_faqs"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:fontFamily="sans-serif"
                android:hint="@string/lbl_hint_comments"
                android:gravity="start"
                android:inputType="text|textNoSuggestions"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btn_send_comment"
                android:background="@drawable/bg_button_log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/lbl_send" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_guest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/light_grey"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif"
                    android:textSize="14sp"
                    android:text="@string/lbl_comments_alert" />

                <Button
                    android:id="@+id/btn_log_in"
                    android:background="@drawable/bg_button_log_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/lbl_login" />

                <Button
                    android:id="@+id/btn_create_account"
                    android:background="@drawable/bg_button_log_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/lbl_create_account" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        tools:listitem="@layout/items_history"
        app:layout_constraintTop_toBottomOf="@id/outer_container" />
</androidx.constraintlayout.widget.ConstraintLayout>